@@ -36,10 +36,11 @@ set got [binutils_run $OBJDUMP "$OBJDUMPFLAGS -i"]
 
 set cpus_expected [list]
 lappend cpus_expected a29k alliant alpha arc arm convex 
-lappend cpus_expected d10v d30v fr30 h8 hppa i386 i860 i960
+lappend cpus_expected d10v d30v fr30 fr500 h8 hppa i386 i860 i960 ip2022
 lappend cpus_expected m32r m68hc11 m68hc12 m68k m88k MCore
 lappend cpus_expected mips mn10200 mn10300 ns32k pj powerpc pyramid
-lappend cpus_expected romp rs6000 s390 sh sparc tahoe tic54x tms320c54x v850
+lappend cpus_expected romp rs6000 s390 sh sparc
+lappend cpus_expected tahoe tic54x tic80 tms320c30 tms320c54x v850
 lappend cpus_expected vax we32k x86-64 xscale z8k z8001 z8002
 
 # Make sure the target CPU shows up in the list.
